--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,8 @@
       <input id="name" type="text" placeholder="song name"/>
       <input id="artist" type="text" placeholder="artist" />
       <input id="album-title" type="text" placeholder="album title" />
-      <button id="checkPage">I want this mp3 now!</button>
+      <button id="send">I want this mp3 now!</button>
+      <button id="check">Autofill!</button>
     </div>
   </body>
 </html>
